test/FAIL/runcmd/to_many_arguments/01_test_run.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

load boucle.o
run 0x1000 0x1000